9.992   2016-03-11

9.991   2016-03-11
    - Cleaned up a bit, removed from TravisCI (No need to CI test a dead dist)
    - Standardized documentation a bit. Made sure links were present.
    - added contributors

9.99    2015-07-19
    - Marked as dead. Bumped version for release.
    - Added .travis.yml
    - Added .gitignore

2.00    2009-11-22
    - Changed to working URL in the test
    - Initial version.