@@ -1,5 +1,5 @@
 {
-   "abstract" : "Shorten URLs",
+   "abstract" : "(DEPRECATED) Shorten URLs",
    "author" : [
       "Eric Hammond <ehammond@thinksome.com>"
    ],
@@ -26,6 +26,7 @@
             "Test::CheckManifest" : "1.29",
             "Test::Kwalitee" : "1.22",
             "Test::More" : "0.88",
+            "Test::PAUSE::Permissions" : "0",
             "Test::Pod" : "1.41",
             "Test::Pod::Coverage" : "1.08",
             "Test::Pod::Spelling::CommonMistakes" : "1.000",
@@ -63,6 +64,7 @@
       "Chase Whitener <capoeirab@cpan.org>",
       "Dave Cross C<davecross@cpan.org>",
       "Iain Truskett C<spoon@cpan.org>"
-   ]
+   ],
+   "x_deprecated" : 1
 }
 
