@@ -1,13 +1,15 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.043.
+# This Makefile.PL for WWW-Shorten-NotLong was generated by
+# Dist::Zilla::Plugin::MakeMaker::Awesome 0.35.
+# Don't edit it but the dist.ini and plugins used to construct it.
+
 use strict;
 use warnings;
 
 use 5.006;
-
 use ExtUtils::MakeMaker;
 
 my %WriteMakefileArgs = (
-  "ABSTRACT" => "Shorten URLs",
+  "ABSTRACT" => "(DEPRECATED) Shorten URLs",
   "AUTHOR" => "Eric Hammond <ehammond\@thinksome.com>",
   "CONFIGURE_REQUIRES" => {
     "ExtUtils::MakeMaker" => 0
@@ -30,14 +32,12 @@ my %WriteMakefileArgs = (
   }
 );
 
-
 my %FallbackPrereqs = (
   "Test::More" => "0.88",
   "WWW::Shorten" => "3.08",
   "strict" => 0,
   "warnings" => 0
 );
-
 
 unless ( eval { ExtUtils::MakeMaker->VERSION(6.63_03) } ) {
   delete $WriteMakefileArgs{TEST_REQUIRES};
