@@ -16,6 +16,11 @@ contributor = Iain Truskett C<spoon@cpan.org>
 -remove = Readme
 -remove = GatherDir
 -remove = ExtraTests
+-remove = MakeMaker
+
+[MakeMaker::Awesome]
+
+[NextRelease]
 
 [GatherDir]
 exclude_filename = META.json
@@ -27,14 +32,21 @@ issues  = 1
 user    = p5-shorten
 [@Git]
 
+[Deprecated]
+
 [CheckChangeLog]
 [PkgVersion]
 [PodSyntaxTests]
+[Test::PAUSE::Permissions]
 [Test::Pod::Coverage::Configurable]
 skip=WWW::Shorten::NotLong
+
 [Test::PodSpelling]
+wordlist = Pod::Wordlist
+spell_cmd = aspell list
 stopword = makealongerlink
 stopword = makeashorterlink
+
 [RunExtraTests]
 
 [Prereqs]
